# smooth_sailing

./: CMakeLists.txt  README.md  package.xml
cfg/: config.yaml  ext_right.yaml  general.yaml  int_right.yaml  mapping.yaml  nav.yaml  params.yaml  workspace.yaml
cfg/calib/: ext_left.yaml  ext_right.yaml  ext_right_ship.yaml  int_left.yaml  int_right.yaml
include/gtsam_nav/: IceNav.h  common.h  eulerFactor.h  gnss.h  gnssFactor.h  graph.h  imu.h  lidar.h  rollPitchFactor.h
include/smooth_sailing/: IceNav.h  alignmentFactor.h  altitudeFactor.h  angleNormFactor.h  common.h  gnss.h  graph.h  imu.h  leverArmFactor.h  lidar.h  vectorNormFactor.h
launch/: cookbook.launch  extract_ship_data.launch  image_extractor.launch  image_reconstruction.launch  mapping.launch  navigation.launch  navigation_evaluation.launch  pipeline.launch  process.launch  visualize.launch
scripts/: color_map.py  cookbook.py  evaluate_navigation.py  exp_comparison.py  extract_images.py  extract_ship_data.py  generate_fov_masks.py  gnss.py  image_reconstruction.py  image_rendering.py  imu_analysis.py  navigation_evaluation.py  pipeline.py  plot_imu.py  plot_trajectory.py  post_processing.py  prepare_workspace.py  process_pointcloud.py  ship_trajectory.py  t_pointcloud.py  visualize_pointcloud.py  visualize_pointclouds.py  visualizer.py
src/: IceNav.cpp  alignment_matrix.cpp  gnss.cpp  graph.cpp  imu.cpp  main.cpp
src/mapping/: image_reconstruction.cpp  main.cpp  mapping.cpp
src/navigation/: IceNav.cpp  gnss.cpp  graph.cpp  imu.cpp  lidar.cpp  main.cpp
